--- a/app/src/main/res/layout/explore_main_page.xml
+++ b/app/src/main/res/layout/explore_main_page.xml
@@ -55,7 +55,7 @@
                     android:layout_marginStart="0dp"
                     android:layout_weight="1"
                     app:layout_constraintStart_toEndOf="@+id/imgHotSearch3"
-                    app:srcCompat="@color/colorHighlighting"
+                    app:srcCompat="@android:color/transparent"
                     tools:layout_editor_absoluteY="54dp" />
 
                 <ImageView
@@ -65,7 +65,7 @@
                     android:layout_marginStart="0dp"
                     android:layout_weight="1"
                     app:layout_constraintStart_toEndOf="@+id/imgHotSearch4"
-                    app:srcCompat="@color/colorHighlighting"
+                    app:srcCompat="@android:color/transparent"
                     tools:layout_editor_absoluteY="54dp" />
 
                 <ImageView
@@ -75,7 +75,7 @@
                     android:layout_marginStart="0dp"
                     android:layout_weight="1"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:srcCompat="@color/colorHighlighting"
+                    app:srcCompat="@android:color/transparent"
                     tools:layout_editor_absoluteY="54dp" />
 
                 <ImageView
@@ -86,7 +86,7 @@
                     android:layout_marginEnd="0dp"
                     android:layout_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@color/colorHighlighting"
+                    app:srcCompat="@android:color/transparent"
                     tools:layout_editor_absoluteY="54dp" />
 
             </LinearLayout>
