--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -9,12 +9,18 @@
 
     <com.algolia.instantsearch.ui.views.SearchBox
         android:id="@+id/searchBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:focusableInTouchMode="false"
         android:queryHint="Search"
+        android:touchscreenBlocksFocus="false"
+        android:visibility="visible"
+        algolia:autofocus="false"
+        algolia:iconifiedByDefault="true"
+        algolia:searchIcon="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,9 +63,22 @@
         android:clickable="true"
         android:visibility="gone"
         algolia:layout_constraintEnd_toEndOf="parent"
-        algolia:layout_constraintHorizontal_bias="0.781"
+        algolia:layout_constraintHorizontal_bias="0.956"
         algolia:layout_constraintStart_toStartOf="parent"
         algolia:layout_constraintTop_toTopOf="parent"
         algolia:srcCompat="@color/colorPrimaryDark" />
+
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Tab to search"
+        android:textSize="20sp"
+        android:visibility="gone"
+        algolia:layout_constraintEnd_toEndOf="parent"
+        algolia:layout_constraintHorizontal_bias="0.218"
+        algolia:layout_constraintStart_toStartOf="parent"
+        algolia:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
