Finished the promotion layout and working on the navigation header

--- a/app/src/main/res/layout/activity_card_tabbed_new.xml
+++ b/app/src/main/res/layout/activity_card_tabbed_new.xml
@@ -50,7 +50,7 @@
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="0dp"
-                    android:layout_height="39dp"
+                    android:layout_height="42dp"
                     android:background="#F97E39"
                     android:gravity="center"
                     android:text="Luckwalker"
@@ -68,6 +68,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="5dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/name"
                     app:srcCompat="@drawable/ic_place_orange_24dp" />
@@ -75,9 +76,12 @@
                 <TextView
                     android:id="@+id/address"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="8dp"
                     android:gravity="center_vertical"
+                    android:maxEms="16"
+                    android:singleLine="false"
                     android:text="九龍石硤尾偉智街38號奉天大廈1樓106室"
                     android:textColor="#000000"
                     android:textSize="18sp"
@@ -189,12 +193,14 @@
                 <TextView
                     android:id="@+id/link"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="16dp"
-                    android:gravity="center"
-                    android:text="http://hihi.com"
-                    android:textColor="#000000"
+                    android:gravity="left"
+                    android:maxEms="18"
+                    android:singleLine="false"
+                    android:text="http://hihi.comasdf.ghjkasdfkjhasldfkajshd"
+                    android:textColor="#0E66EA"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@+id/imageView20"
                     app:layout_constraintTop_toBottomOf="@+id/imageView18" />
@@ -206,21 +212,22 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView20"
+                    app:layout_constraintTop_toBottomOf="@+id/link"
                     app:srcCompat="@drawable/ic_local_offer_black_24dp" />
 
                 <TextView
                     android:id="@+id/tag"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="16dp"
-                    android:gravity="center"
+                    android:gravity="left"
+                    android:maxEms="16"
                     android:text="PS4, VR, Your mom"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@+id/imageView21"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView20" />
+                    app:layout_constraintTop_toBottomOf="@+id/link" />
 
                 <ImageView
                     android:id="@+id/imageView22"
@@ -229,7 +236,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView21"
+                    app:layout_constraintTop_toBottomOf="@+id/tag"
                     app:srcCompat="@drawable/ic_description_black_24dp" />
 
                 <TextView
@@ -246,7 +253,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView22"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView21"
+                    app:layout_constraintTop_toBottomOf="@+id/tag"
                     app:layout_constraintVertical_bias="0.0" />
 
                 <ImageView
@@ -353,6 +360,31 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/uploadPhoto" />
 
+                <TextView
+                    android:id="@+id/numberOfLikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="TextView"
+                    android:textColor="#000000"
+                    app:layout_constraintBottom_toBottomOf="@+id/name"
+                    app:layout_constraintEnd_toStartOf="@+id/likeButton2"
+                    app:layout_constraintTop_toTopOf="@+id/name" />
+
+                <ImageView
+                    android:id="@+id/likeButton2"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/name"
+                    app:srcCompat="@drawable/ic_favorite_border_black_24dp" />
+
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
 
@@ -364,6 +396,8 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header"
+            app:itemIconTint="@drawable/drawer_item"
+            app:itemTextColor="@drawable/drawer_item"
             app:menu="@menu/menu_nav">
 
         </android.support.design.widget.NavigationView>
