--- a/app/src/main/res/layout/explore_main_page.xml
+++ b/app/src/main/res/layout/explore_main_page.xml
@@ -21,6 +21,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="0"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:text="Hot Search"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -95,7 +97,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:id="@+id/txtHotSearch1"
