--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#ff0000</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="black">#222222</color>
     <color name="filter">#00ffffff</color>
+    <color name="white">#ffffff</color>
 
 </resources>
