--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">#F97E39</item>
         <item name="colorPrimaryDark">#c04f04</item>
         <item name="colorAccent">#ffaf67</item>
+        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -14,6 +15,12 @@
         <item name="colorPrimary">#F97E39</item>
         <item name="colorPrimaryDark">#c04f04</item>
         <item name="colorAccent">#ffaf67</item>
+        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
+    </style>
+
+    <style name="MyActionBarTitleText"
+        parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">#ffffff</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
