finished the login system and working on the comment section

--- a/app/src/main/res/layout/activity_card_tabbed_new.xml
+++ b/app/src/main/res/layout/activity_card_tabbed_new.xml
@@ -267,6 +267,17 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/description" />
 
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="0dp"
+                    android:layout_height="3dp"
+                    android:layout_marginTop="24dp"
+                    android:background="#DADADA"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/uploadPhoto" />
+
                 <TextView
                     android:id="@+id/photos"
                     android:layout_width="wrap_content"
@@ -278,6 +289,18 @@
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView23" />
+
+                <TextView
+                    android:id="@+id/comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:text="Comments"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
                 <ImageView
                     android:id="@+id/photo1"
@@ -338,6 +361,18 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView23" />
 
+                <TextView
+                    android:id="@+id/allComments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/all_comments"
+                    android:textColor="#0E66EA"
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
                 <Button
                     android:id="@+id/uploadPhoto"
                     android:layout_width="89dp"
@@ -349,11 +384,24 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/photo4" />
 
+                <Button
+                    android:id="@+id/buttonPostComment"
+                    android:layout_width="89dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="#F97E39"
+                    android:text="@string/post"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewComments" />
+
                 <ImageView
                     android:id="@+id/imageView28"
                     android:layout_width="0dp"
                     android:layout_height="3dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="24dp"
                     android:background="#DADADA"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -384,6 +432,35 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/name"
                     app:srcCompat="@drawable/ic_favorite_border_black_24dp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerViewComments"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/comments" />
+
+                <EditText
+                    android:id="@+id/editTextAddComment"
+                    android:layout_width="0dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16sp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@android:drawable/screen_background_light_transparent"
+                    android:ems="10"
+                    android:hint="Add a comment..."
+                    android:inputType="text"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/buttonPostComment"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewComments" />
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
